# advent-of-code

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  new.txt  old.txt  output.txt  pyproject.toml  pyrightconfig.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: python-app.yml
aoc/: run.py
aoc/common/: graph.py  grid.py  priority_queue.py
aoc/solutions/year2022/: day03.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day19.py  day22.py  day23.py  day24.py
aoc/solutions/year2023/: day02.py  day03.py  day05.py  day07.py  day08.py
aoc/solutions/year2024/: day02.py  day04.py  day05.py  day06.py  day08.py  day09.py  day10.py  day12.py  day13.py  day14.py  day15.py  day16.py  day18.py  day19.py
aoc/solutions/year2025/: day01.py
aoc/tests/: test_all.py  test_graph.py  test_priority_queue.py  test_range_map.py
aoc/utils/: helpers.py
examples/2022/: 01.yaml  02.yaml  03.yaml  04.yaml  05.yaml  06.yaml  07.yaml  08.yaml  09.yaml  10.yaml  10_answer.txt  11.yaml  12.yaml  13.yaml  14.yaml  15.yaml  16.yaml  17.yaml  18.yaml  19.yaml  20.yaml  21.yaml  22.yaml  23.yaml  24.yaml  25.yaml
examples/2023/: 01.yaml  02.yaml  03.yaml  04.yaml  05.yaml  06.yaml  07.yaml  08.yaml
examples/2024/: 01.yaml  02.yaml  03.yaml  04.yaml  05.yaml  06.yaml  07.yaml  08.yaml  09.yaml  10.yaml  11.yaml  12.yaml  13.yaml  14.yaml  15.yaml  16.yaml  17.yaml  18.yaml  19.yaml
examples/2025/: 01.yaml
python/: .flake8  pyproject.toml  run.py
python/aoc_utils/: finder.py
python/common/: astar.py  graph.py  grid.py  point.py  priority_queue.py
python/examples/: 02.txt  15.txt
python/solutions/: day01.py  day10.py  day11.py  day12.py  day14.py  day19.py  day20.py  day22.py  day24.py  day25.py
python/solutions/2022/: day01.py  day06.py  day08.py  day09.py  day12.py  day14.py  (+4 more)
python/tests/: test_all.py  test_astar.py  test_graph.py  test_priority_queue.py
(+34 files in other folders)
