[project]
name = "advent_of_code"
version = "0.1.0"
description = ""
authors = [{name = "Roy Williams", email =  "roy.williams.iii@gmail.com"}]
readme = "README.md"
requires-python = ">= 3.13"

dependencies = [
    "anthropic",
    "bs4",
    "click",
    "immutables",
    "ipython",
    "mypy",
    "numpy",
    "py-spy",
    "pyyaml",
    "requests",
    "types-pyyaml",
    "types-requests",
]

[dependency-groups]
dev = [
    "ipykernel",
    "pre-commit",
    "pyright",
    "pytest",
    "ruff",
]
