[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aoc"
version = "0.1.0"
description = "Advent of Code Solutions"
authors = [{ name = "Roy Williams", email = "roy.williams.iii@gmail.com" }]
readme = "README.md"
requires-python = ">= 3.14"

dependencies = [
    "anthropic",
    "bs4",
    "click",
    "immutables",
    "ipython",
    "mypy",
    "numpy",
    "py-spy",
    "pyyaml",
    "requests",
    "types-pyyaml",
    "types-requests",
]

[dependency-groups]
dev = ["ipykernel", "jupyter", "pre-commit", "pyright", "pytest", "ruff"]

[tool.setuptools]
packages = ["aoc"]

[tool.pytest.ini_options]
testpaths = ["aoc/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-ra", "--strict-markers"]
